--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.1",
     "axios": "^1.7.7",
+    "canvas-to-blob": "^1.0.0",
     "framer-motion": "^11.5.4",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.8",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.13",
